2011-05-30  vadim  <vadim@netcitadel.com>

	* pf.g (nat_rule): see #2449 Implementd import of PF "nat"
	rules. Known limitations:
	  - as of v4.2 we can not generate optinal parameters for the
	    "source-hash" pooltype. "sticky-address" is not supported either.

2011-05-27  vadim  <vadim@netcitadel.com>

	* PFImporter.cpp: see #2394 pf.conf import. This version implements
	import of pf.conf configuration with the following limitations:
	  - anchors are not imported.  Anchor rules are imported but rules
	    inside anchors are not.
	  - only pf.conf configurations designed with the use of keyword
	    "quick" can be imported.
	  - Macros are expanded during import and are not recreated as
	    objects.  Tables are imported as run-time AddressTable obejcts
	    configured with the file name, or object groups.
	  - User has to specify host OS and PF version number during import
	    process because interpretation of rules with default settings
	    of some parameters is version-dependent.
	  - Import of IPv6 addresses and ICMPv6 matches in pf.conf is not
	    supported at this time.
	  - Import of TCP flag matches for flags 'E' and 'W' is not supported.

2011-05-26  Vadim Kurland  <vadim@netcitadel.com>

	* PolicyCompiler_pf.cpp (compile): see #2434 "PF compiler should
	use 'self' keyword where appropriate". Compiler for PF now uses
	keyword 'self' in rules where firewall object is used in Source
	or Destination.

	* fwcompiler/Compiler.cpp (processNext): added rule processor to
	replace firewall object with special run-time object "self" in
	Source and Destination rule elements. This rule processor can
	be used in policy compilers for any platform.

2011-05-17  vadim  <vadim@netcitadel.com>

	* FWObjectDatabase_tree_ops.cpp (merge): see #2420 "Crash when
	selecting New Firewall and existing firewall has interface that is
	locked". Fixed GUI crash that happened on some operations if an
	object in the tree was locked. For example, if the user locked an